--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,4 @@
 @import 'tailwindcss';
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 
 button {
@@ -10,4 +7,8 @@ button {
 
 button:active {
     cursor: grabbing;
+}
+
+input{
+    outline: none;
 }
